use less plain strings and more streams