@@ -12,21 +12,15 @@ import org.apache.http.impl.client.HttpClientBuilder;
 import org.apache.http.impl.client.HttpClients;
 import org.apache.http.impl.conn.BasicHttpClientConnectionManager;
 import org.apache.jena.query.*;
-import org.apache.jena.rdf.model.Literal;
 import org.apache.jena.riot.Lang;
 import org.apache.jena.riot.ResultSetMgr;
 import org.apache.jena.riot.WebContent;
 import org.apache.jena.sparql.engine.http.QueryEngineHTTP;
 import org.apache.jena.vocabulary.OWL;
 import org.apache.jena.vocabulary.RDF;
-import org.dice_group.lpbenchgen.dl.OWL2SPARQL;
 import org.dice_group.lpbenchgen.sparql.AbstractSPARQLIndividualRetriever;
-import org.dice_group.lpbenchgen.sparql.IndividualRetriever;
-import org.semanticweb.owlapi.model.OWLClassExpression;
-import org.semanticweb.owlapi.model.OWLLiteral;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import uk.ac.manchester.cs.owl.owlapi.OWLDataFactoryImpl;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
@@ -34,13 +28,15 @@ import java.io.InputStream;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
 /**
  * Uses an Closed World Assumption and a SPARQL endpoint to retrieve Individuals
  *
  * @author Lixi Alié Conrads
  */
-public class SPARQLClosedWorldIndividualRetriever  extends AbstractSPARQLIndividualRetriever {
+public class SPARQLClosedWorldIndividualRetriever extends AbstractSPARQLIndividualRetriever {
 
     /**
      * The constant LOGGER.
@@ -49,7 +45,7 @@ public class SPARQLClosedWorldIndividualRetriever  extends AbstractSPARQLIndivid
     /**
      * The constant DEFAULT_VARIABLE_NAME.
      */
-    private String endpoint;
+    private final String endpoint;
 
     private final String ontologyResource;
 
@@ -59,57 +55,53 @@ public class SPARQLClosedWorldIndividualRetriever  extends AbstractSPARQLIndivid
      *
      * @param endpoint the endpoint
      */
-    public SPARQLClosedWorldIndividualRetriever(String endpoint){
-        this.endpoint=endpoint;
-        QueryExecution qexec = QueryExecutionFactory.sparqlService(endpoint, "SELECT ?s WHERE { ?s <"+ RDF.type+"> <"+ OWL.Ontology+"> } LIMIT 1");
+    public SPARQLClosedWorldIndividualRetriever(String endpoint) {
+        this.endpoint = endpoint;
+        QueryExecution qexec = QueryExecutionFactory.sparqlService(endpoint, "SELECT ?s WHERE { ?s <" + RDF.type + "> <" + OWL.Ontology + "> } LIMIT 1");
         ResultSet res = qexec.execSelect();
-        if(res.hasNext()) {
+        if (res.hasNext()) {
             ontologyResource = res.next().get("s").toString();
-        }else{
-            ontologyResource="";
+        } else {
+            ontologyResource = "";
         }
     }
 
 
-    protected List<String> createRequest(String sparqlQuery, int timeOut){
-        List<String> ret =  new ArrayList<String>();
-        int code=0;
-        String test;
-        String actualContentType="";
+    protected Stream<String> createRequest(String sparqlQuery, int timeOut) {
+        // TODO: this needs heavy cleanup
+
         try {
-            int timeout = timeOut;
+            int timeout = timeOut * 1000;
             RequestConfig config = RequestConfig.custom()
-                    .setConnectTimeout(timeout * 1000)
-                    .setConnectionRequestTimeout(timeout * 1000)
-                    .setSocketTimeout(timeout * 1000).build();
+                    .setConnectTimeout(timeout)
+                    .setConnectionRequestTimeout(timeout)
+                    .setSocketTimeout(timeout).build();
             CloseableHttpClient client = HttpClientBuilder.create().setDefaultRequestConfig(config).build();
             //HttpClient client = HttpClients.custom().setConnectionManager(new BasicHttpClientConnectionManager()).build();
-            HttpGet get = new HttpGet(endpoint+"?query="+ URLEncoder.encode(sparqlQuery, "UTF-8"));
+            HttpGet get = new HttpGet(endpoint + "?query=" + URLEncoder.encode(sparqlQuery, StandardCharsets.UTF_8));
 
             get.addHeader(HttpHeaders.ACCEPT, QueryEngineHTTP.defaultSelectHeader());
             HttpResponse resp = client.execute(get);
-            code = resp.getStatusLine().getStatusCode();
-            actualContentType = resp.getEntity().getContentType().getValue().replace("; charset=utf-8","");
-            if(actualContentType==null || actualContentType.isEmpty()){
-                actualContentType=QueryEngineHTTP.defaultSelectHeader();
+            String actualContentType = resp.getEntity().getContentType().getValue().replace("; charset=utf-8", "");
+            if (actualContentType.isEmpty()) {
+                actualContentType = QueryEngineHTTP.defaultSelectHeader();
             }
             Lang lang = WebContent.contentTypeToLangResultSet(actualContentType);
-            test = read(resp.getEntity().getContent());
+            String test = read(resp.getEntity().getContent());
             InputStream is = new ByteArrayInputStream(test.getBytes(StandardCharsets.UTF_8));
-            ResultSet res= ResultSetMgr.read(is, lang);
+            Spliterator<QuerySolution> querySolutionSpliterator = Spliterators.spliteratorUnknownSize(ResultSetMgr.read(is, lang), 0);
 
-            while (res.hasNext()) {
-                String resource = res.next().get(DEFAULT_VARIABLE_NAME).toString();
-                if(!resource.equals(ontologyResource)){
-                    ret.add(resource);
-                }
-            }
-        }catch(Exception e){
+            return StreamSupport
+                    .stream(querySolutionSpliterator, false)
+                    .map(querySolution -> querySolution.get(DEFAULT_VARIABLE_NAME).toString())
+                    .filter(str -> !str.equals(ontologyResource));
+
+        } catch (Exception e) {
             String id = UUID.randomUUID().toString();
             LOGGER.debug("Could not execute request due to {}, see debug id:{}", e.getMessage(), id);
-            LOGGER.debug(id+": ", e);
+            LOGGER.debug(id + ": ", e);
+            return Stream.empty();
         }
-        return ret;
     }
 
     private String read(InputStream content) {
@@ -123,7 +115,7 @@ public class SPARQLClosedWorldIndividualRetriever  extends AbstractSPARQLIndivid
         try {
             return byteSource.asCharSource(Charsets.UTF_8).read();
         } catch (IOException e) {
-            LOGGER.error("Could not read stream due to ",e);
+            LOGGER.error("Could not read stream due to ", e);
         }
         return "";
 
@@ -133,20 +125,19 @@ public class SPARQLClosedWorldIndividualRetriever  extends AbstractSPARQLIndivid
     public ResultSet getResultMap(Query q) {
         try {
             HttpClient client = HttpClients.custom().setConnectionManager(new BasicHttpClientConnectionManager()).build();
-            HttpGet get = new HttpGet(endpoint+"?query="+ URLEncoder.encode(q.serialize(), "UTF-8"));
+            HttpGet get = new HttpGet(endpoint + "?query=" + URLEncoder.encode(q.serialize(), StandardCharsets.UTF_8));
             get.addHeader(HttpHeaders.ACCEPT, QueryEngineHTTP.defaultSelectHeader());
             HttpResponse resp = client.execute(get);
             String actualContentType = resp.getEntity().getContentType().getValue();
-            if(actualContentType==null || actualContentType.isEmpty()){
-                actualContentType=QueryEngineHTTP.defaultSelectHeader();
+            if (actualContentType == null || actualContentType.isEmpty()) {
+                actualContentType = QueryEngineHTTP.defaultSelectHeader();
             }
-            Lang lang = WebContent.contentTypeToLangResultSet(actualContentType.replace("; charset=utf-8",""));
+            Lang lang = WebContent.contentTypeToLangResultSet(actualContentType.replace("; charset=utf-8", ""));
             String test = read(resp.getEntity().getContent());
             InputStream is = new ByteArrayInputStream(test.getBytes(StandardCharsets.UTF_8));
-            ResultSet res= ResultSetMgr.read(is, lang);
-            return res;
-        }catch(Exception e){
-            LOGGER.error("Could not retrieve result map due to " ,e);
+            return ResultSetMgr.read(is, lang);
+        } catch (Exception e) {
+            LOGGER.error("Could not retrieve result map due to ", e);
         }
         return null;
     }
